# Framework2D

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
src/engine/: audio.cpp  audio.hpp  common.cpp  common.hpp  input.cpp  input.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
src/math/: angles.hpp  camera.cpp  camera.hpp  rect_pack.cpp  rect_pack.hpp  types.hpp
src/resources/: animation.cpp  animation.hpp  font.cpp  font.hpp  texture.cpp  texture.hpp  texture_atlas.cpp  texture_atlas.hpp
src/thread/: thread_pool.hpp
src/ui/core/: menu.cpp  menu.hpp  node.hpp
src/ui/widgets/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  slider.cpp  slider.hpp  sprite.cpp  text_box.cpp  text_box.hpp  text_input.cpp  text_input.hpp
src/utility/: array2D.hpp  file_io.cpp  file_io.hpp  memory.hpp  result.hpp  signals.hpp  text.cpp  text.hpp
